# WFRestarter

./: CMakeLists.txt
src/: main.cpp
src/features/settings_manager/: settings_manager.cpp  settings_manager.h
src/features/settings_validator/: settings_validator.cpp  settings_validator.h
src/utils/config_gen/: config_gen.cpp  config_gen.h
src/utils/get_keyname/: get_keyname.cpp  get_keyname.h
src/utils/message_peeker/: message_peeker.cpp  message_peeker.h
src/utils/process_kill/: process_kill.cpp  process_kill.h
src/utils/sys_input/: sys_input.cpp  sys_input.h
src/utils/system_hook/: system_hook.cpp  system_hook.h
